fix: overflow issues, add max height

--- a/src/scss/frontend.scss
+++ b/src/scss/frontend.scss
@@ -1,67 +1,83 @@
-$base-index : 9999 !default;
+$base-index: 9999 !default;
 
 .abs-popup {
-	&.front {
-		display: none;
+  &.front {
+	display: none;
+  }
+
+  &.front.active {
+	display: block;
+  }
+
+  .overlay {
+	background-color: rgba(0, 0, 0, 0.5);
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	z-index: $base-index - 1;
+  }
+
+  .abs-modal-wrap {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: $base-index;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+
+  .modal-content {
+	position: relative;
+	z-index: $base-index + 1;
+	background-color: #fff;
+	padding: 20px;
+	max-width: 100%;
+  }
+
+  .modal-body {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	max-height: 75vh;
+	overflow: auto;
+
+	&::-webkit-scrollbar {
+	  display: none;
+	}
+  }
+
+  .modal-body > * {
+	max-width: 100%;
+	margin: 0 auto;
+  }
+
+  button.close {
+	background-color: transparent !important;
+	height: auto !important;
+	display: flex;
+	align-items: center;
+	height: auto;
+	padding: 0 !important;
+	border: none;
+	cursor: pointer;
+
+	&:hover {
+	  opacity: .75;
 	}
 
-	&.front.active {
-		display: block;
+	&:focus {
+	  border: none !important;
+	  outline: none;
 	}
+  }
 
-	.overlay {
-		background-color: rgba(0, 0, 0, 0.5);
-		left:0;
-		right: 0;
-		top:0;
-		bottom: 0;
-		position: absolute;
-		z-index: $base-index - 1;
-	}
-	.abs-modal-wrap {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		left: 0;
-		z-index: $base-index;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-	.modal-content {
-		position: relative;
-		z-index: $base-index + 1;
-		background-color: #fff;
-		padding: 20px;
-		max-width: 500px;
-	}
-
-	.modal-body > * {
-		max-width: 100%;
-		margin: 0 auto;
-	}
-
-	button.close {
-		background-color: transparent !important;
-		height: auto !important;
-		display: flex;
-		align-items: center;
-		height: auto;
-		padding: 0 !important;
-		border: none;
-		cursor: pointer;
-		&:hover {
-			opacity: .75;
-		}
-		&:focus {
-			border: none !important;
-			outline: none;
-		}
-	}
-
-	.modal-header {
-		display: flex;
-		justify-content: flex-end;
-	}
+  .modal-header {
+	display: flex;
+	justify-content: flex-end;
+	padding-bottom: 20px;
+  }
 }
